--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("/images/digital-marketing-meeting.jpg");
     /*Unsure on how to add an alt in here, but would if I knew how*/
     background-size: cover;
     background-position: center;
